[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/vendor/fonts/wingmavenpro.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/UI/HUD/crosshair.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/Radar.tscn" type="PackedScene" id=4]



[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SetContainer" type="CenterContainer" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[node name="SetDisplay" type="Label" parent="SetContainer"]
margin_left = 41.0
margin_top = 20.0
margin_right = 158.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "SET: 1000"

[node name="KpsContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 70.0

[node name="KpsDisplay" type="Label" parent="KpsContainer"]
margin_left = 41.0
margin_top = 20.0
margin_right = 159.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "KPS: 1000"

[node name="CrosshairContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Crosshair" type="TextureRect" parent="CrosshairContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 3 )

[node name="RadarContainer" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0

[node name="Viewport" type="Viewport" parent="RadarContainer"]
size = Vector2( 128, 128 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Node2D" parent="RadarContainer/Viewport" instance=ExtResource( 4 )]
